--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     padding-right: 45px;
     padding-left: 45px;   
     border-bottom: 4px solid #cccccc;
-    
+    position: static;    
 }
 
 #mainHeader2 { 
@@ -20,6 +20,7 @@ body {
     padding-right: 40px;
     padding-left: 40px;   
     border-bottom: 4px solid #cccccc;
+    position: static;
 }
 
 #mainHeader3 { 
@@ -29,6 +30,7 @@ body {
     padding-right: 40px;
     padding-left: 40px;   
     border-bottom: 4px solid #cccccc;
+    position: static;
 }
 
 
@@ -169,10 +171,8 @@ img {
   .row::after {
     content: "";
     clear: both;
-    display: table;
+    display: block;
   }
-
-
 
 h2 {
     border-bottom: 2px solid #dddddd;
@@ -180,8 +180,6 @@ h2 {
     color: #4aaaa5;
     font-family: "Georgia", "Times New Roman", "Times", "Serif";
 }
-
-
 
 .button { 
     background: #4aaaa5; 
@@ -205,9 +203,48 @@ input {
     height: 33px;   
 }
 
+@media screen and (min-width: 640px){
+    #container {
+        font-size: 80px;
+        background-color:#4aaaa5
+}
 
+@media screen and (max-width: 640px) {
+    #container {
+        font-size: 30px;
+}
 
+@media screen and (min-width: 768px) {
+    #container {
+        font-size: 80px;
+}     
 
+@media only screen and (max-width: 768px) {
+    [class="col-"] {
+        width: 100%;
+        font-size: 30px;
+}
 
+@media screen and (min-width: 980px) {
+    #container {
+        font-size: 80px;    
+}
 
+@media screen and (max-width: 980px) {
+    #container {
+        font-size: 30px;    
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
