--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 } */
 
 body {
-    background-image: url(../images/white.Canvas.Background.jpg);
+    background-image: url(../images/Minimalist.background.jpg);
     background-repeat: repeat;
     /* background-color: #eee; */
 
@@ -14,7 +14,7 @@ body {
 
 .headerContents, .mainSection, .contentBox, footer {
     /* border: 1px dashed red; */
-    width: 960px;
+    width: 960px;   
     margin: auto;
 }
 
@@ -22,7 +22,7 @@ header, footer {
     display: flex;
     align-items: center;
     width: 100%;
-    background: #fff;
+    background: rgb(156, 140, 119);
     border-bottom: 2px solid #ddd;
 }
 
@@ -38,29 +38,30 @@ header {
     align-items: center;
     height: 100px;
     padding-bottom: 10px;
-    background-color: #f8cca4da;
+    background-color: rgb(156, 140, 119);
     /* padding: 5px 40px; */
-    color: #fff;
+    color: rgb(156, 140, 119);
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 3em;
     font-weight: 800;
 }
 
-.logo, ul {
+/* .logo, ul {
     /* border: 1px dashed blue; */
-}
+} */
 
 .headerContents, nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgb(156, 140, 119);
 }
 
 .contentBox {
+    width: 900px;
     background: #fff;
     overflow: hidden;
-    margin: 40px 0px 100px 0px;
+    margin: 40px 0px 40px 0px;
     padding: 5px 40px 40px 40px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -152,6 +153,25 @@ footer {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 
 /* PORTFOLIO PAGE STYLES */
