--- a/css/style1.css
+++ b/css/style1.css
@@ -7,7 +7,7 @@
 $primary-color: #333; */
 
 body {
-    background-image: url(assets/images/white.Canvas.Background.jpg);
+    background-image: url(../images/Minimalist.background.jpg);
     background-repeat: repeat;
     /* background-color: #eee; */
 
@@ -32,6 +32,7 @@ body {
         justify-content: flex-start;
         height: 80px;
         width: 100%;
+        color: rgb(156, 140, 119);
     }
 
     .logo {
@@ -43,12 +44,12 @@ body {
         padding: 0;
         height: 80px;
         width: 100%;
-        background-color: #ff810a;
+        background-color: rgb(156, 140, 119);
     }
 
     .logo h1, h3 {
         font-size: 5vmax;
-        color: #fff;
+        color: rgb(156, 140, 119);
         margin: 30px 0;
     }
 
@@ -77,7 +78,7 @@ body {
 
     .contentBox {
         width: 90vw;
-        background-color: #fff;
+        background-color: rgb(156, 140, 119);
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         margin: 40px 0px 200px 0px;
@@ -291,6 +292,25 @@ body {
             border-radius: 3px;
             margin: 10px 20px 20px 0;
         }
+
+        img:hover {
+            animation: shake 0.5s;
+            animation-iteration-count: infinite;
+          }
+          
+          @keyframes shake {
+            0% { transform: translate(1px, 1px) rotate(0deg); }
+            10% { transform: translate(-1px, -2px) rotate(-1deg); }
+            20% { transform: translate(-3px, 0px) rotate(1deg); }
+            30% { transform: translate(3px, 2px) rotate(0deg); }
+            40% { transform: translate(1px, -1px) rotate(1deg); }
+            50% { transform: translate(-1px, 2px) rotate(-1deg); }
+            60% { transform: translate(-3px, 1px) rotate(0deg); }
+            70% { transform: translate(3px, 1px) rotate(-1deg); }
+            80% { transform: translate(-1px, -1px) rotate(1deg); }
+            90% { transform: translate(1px, 2px) rotate(0deg); }
+            100% { transform: translate(1px, -2px) rotate(-1deg); }
+          }
 
         footer {
             position: fixed;
